fix some layout bugs and link to the talk page from the login msg

--- a/public/assets/stylesheets/embed.css
+++ b/public/assets/stylesheets/embed.css
@@ -22,7 +22,7 @@
     padding: 12px;
     box-sizing: border-box;
     position: relative;
-    height: 124px;
+    height: 140px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -49,10 +49,10 @@
 }
 
 .xs .image-box, .xs .live-badge{
-    height: 44px;
-    width: 44px;
-    max-height: 44px;
-    max-width: 44px;
+    height: 60px;
+    width: 60px;
+    max-height: 60px;
+    max-width: 60px;
 }
 
 .xs .live-badge {
@@ -99,10 +99,10 @@
 }
 
 .xs .top-box {
-    margin-left: 56px;
-    height: 50px;
-    max-height: 50px;
-    margin-bottom: 6px;
+    margin-left: 71px;
+    height: 72px;
+    max-height: 72px;
+    margin-bottom: 0;
 }
 
 .tiny .top-box {
@@ -110,17 +110,17 @@
 }
 
 .small .top-box, .medium .top-box, .large .top-box {
-    height: 56px;
-    max-height: 56px;
+    height: 72px;
+    max-height: 72px;
 }
 
 .xs .info-box, .tiny .info-box, .token .info-box {
-    margin-right: 50px;
+    margin-right: 65px;
 }
 
 .tiny .info-box, .token .info-box {
   margin-bottom: 6px;
-  height: 50px;
+  height: 65px;
 }
 
 .tiny .action-panel {
@@ -136,21 +136,18 @@ h4.title {
     margin: 0;
     max-height: 48px;
     line-limit: 2;
-    /**/
     display: block;
-    /* Fallback for non-webkit */
     display: -webkit-box;
-    max-height: 48px;
-    /* Fallback for non-webkit */
+    max-height: 36px;
     margin: 0 auto;
-    font-size: 21px;
-    line-height: 24px;
+    font-size: 18px;
+    line-height: 18px;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-bottom: 0;
-    margin-top: -3px;
+    margin-bottom: 4px;
+    margin-top: 0px;
 }
 
 h4.title .live {
@@ -570,7 +567,7 @@ h4.title:hover {
   text-align: center;
   width: 100%;
   height: 50px;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
 }
 
 .token .branding-box svg, .token .branding-box .brand-logo, .token .branding-box .brand-words {
